# ProjectWolly2

./: AI.cpp  Board.cpp  Board.h  CMakeLists.txt  GameFlow.cpp  README.md  logfile  main.cpp  mainTemp.cpp  makefile
Tests/: AITest.cpp  BoardTest.cpp  CellCollectionTest.cpp  CellTest.cpp  GameLogicsTest.cpp  gtest_main.cpp  playerTest.cpp  test.cpp
include/: AI.h  Cell.h  Client.h  GameFlow.h  Player.h  ServerPlayer.h
src/: AI.cpp  Board.cpp  Cell.cpp  CellCollection.cpp  Client.cpp  GameFlow.cpp  GameLogics.cpp  Player.cpp  ServerPlayer.cpp  Winner.cpp  definitions  main.cpp
